@@ -1,3 +1,7 @@
+2010-03-27  Robby Stephenson  <robby@periapsis.org>
+
+	* Added basic fetch for Open Llibrary covers.
+
 2010-03-24  Robby Stephenson  <robby@periapsis.org>
 
 	* Added clear button for rating widget (BUG: 227982).
